frontend/src/styles/FooterLarge.css
/* @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Josefin+Sans&display=swap');
/* position: fixed;
bottom: 0; 	height: 20%;
*/
.footer {
	font-family: 'Josefin Sans', Georgia, Times, serif;

	background-color: #400801;
	position:relative;
	bottom:0px;
	width: 100%;
	color: white;
	display: flex;
  	flex-direction: row;
	height: 170px;


    /* flex-wrap: wrap; */
	/* padding-right: 15px; */
	padding-left: 15px; 
}

.footerDataShort,
.footerDataLong {
	position: relative;
	display: flex;
	flex-direction: column;
	flex-basis: 100%;
	width: 100%;
	margin: 12px auto;
	text-align: left;
	font-size: large;
}

.footerDataLong {
	flex: 3;
	font-size: large;
}
.footerDataShort {
	font-size: large;  
	flex: 2;
	text-align:left;
}



.container {
	padding-top: 0px !important; 
	width: 100% !important;
	display: flex !important;
	flex-direction: row !important;
	flex-wrap: wrap!important;
	padding-bottom: 0px!important; 
	max-width: 1200px!important;
	margin: auto!important;
}

/* .container * {
	color: white;
} */

.copyrightText {
	color: white;
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	height: 30px;
	font-size: medium;  
}

.header1 {
	font-size: xx-large;  
	font-weight: bold;
}


.header2 {
	font-size: larger;  
	font-weight: bold;
}

@media (min-width: 768px) {
	.container {
		flex-direction: row;
	}
} 

